<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slide_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#e2e2e2"
    android:layout_marginLeft="20dp"
    tools:context=".MainActivity">
   
	<LinearLayout 
    	android:id="@+id/slide_layout11"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="210"
    	android:orientation="horizontal" >
    
	    <LinearLayout
	    	android:id="@+id/slide_layout111"
    		android:layout_width="wrap_content"
        	android:layout_height="match_parent"
    		android:gravity="center_vertical"
    		android:orientation="horizontal" >

    		<ImageView
        		android:id="@+id/settings_img"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginRight="15dp"
        		android:adjustViewBounds="true"
        		android:scaleType="fitCenter"
        		android:src="@drawable/settings_icon2" />

    		<TextView
    		    android:id="@+id/slide_t_settings"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:textColor="#5b5b5b"
        		android:text="@string/nastavenia" />

		</LinearLayout>
	</LinearLayout>
	
	
	<LinearLayout 
     	android:id="@+id/slide_layout12"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="70"
    	android:orientation="horizontal" 
    	android:gravity="center_vertical">
    
	  	<TextView 
	  	    android:id="@+id/slide_t_velkost"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/velkost_pisma"
    		android:textColor="#393939"
	    />  
	</LinearLayout>
    
	<LinearLayout 
     	android:id="@+id/slide_layout13"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
   	 	android:layout_weight="5"
    	android:orientation="horizontal" 
    	android:background="#d4d4d4">
	</LinearLayout>
	
	<RelativeLayout
     	android:id="@+id/slide_layout14"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="150"
    	android:orientation="horizontal" >
	  
	    <TextView 
	        android:id="@+id/small"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/small"
    		android:textColor="#9c9c9c"
    		android:layout_alignBaseline="@+id/medium"
    		android:layout_marginTop="0dp"
    		android:includeFontPadding="false"
	    	/> 
	    
	    <TextView 
	        android:id="@id/medium"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/normal"
    		android:textColor="#9c9c9c"
    		android:includeFontPadding="false"
    		android:layout_centerInParent="true"
	   		 /> 
	    
	    <TextView 
	        android:id="@+id/big"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignBaseline="@id/medium"
    		android:text="@string/big"
    		android:textColor="#9c9c9c"
    		android:layout_alignParentRight="true"
    		android:layout_centerVertical="true"
    		android:includeFontPadding="false"
	    	/> 
   
	</RelativeLayout>
	
	<LinearLayout
     	android:id="@+id/slide_layout15"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="5"
    	android:orientation="horizontal" 
    	android:background="#d4d4d4">
	</LinearLayout>
	
	<LinearLayout
     	android:id="@+id/slide_layout16"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="75"
    	android:orientation="horizontal" >
	</LinearLayout>
	
	<LinearLayout
     	android:id="@+id/slide_layout17"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="190"
    	android:orientation="horizontal"
        android:baselineAligned="false">
	    
	    <RelativeLayout
    		android:layout_width="0dp"
    		android:layout_height="match_parent"
    		android:layout_weight="497"
    		>
    	
	        <TextView
	            android:id="@+id/magazin_notifikacie"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="#393939"      		
        		android:includeFontPadding="false" />
	        
	        <ImageView
        		android:id="@+id/slide_magazin"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:scaleType="fitXY"
        		android:layout_alignParentBottom="true"/>   		
    	</RelativeLayout>
    	

    	
    	<LinearLayout
    		android:layout_width="0dp"
    		android:layout_height="match_parent"
    		android:layout_weight="6"
    		android:background="#d4d4d4"
    		android:orientation="horizontal" >
    	</LinearLayout>
    
    	<LinearLayout
    		android:layout_width="0dp"
    		android:layout_height="match_parent"
    		android:layout_weight="177"
    		android:orientation="horizontal" >
    	</LinearLayout>
    	
    	<RelativeLayout
    		android:layout_width="0dp"
    		android:layout_height="match_parent"
    		android:layout_weight="320"
            android:visibility="invisible">
    	
	        <TextView
	            android:id="@+id/magnus_notifikacie"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="#393939"
        		android:includeFontPadding="false" />
	        
	        <ImageView
        		android:id="@+id/slide_klub"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:scaleType="fitXY"
        		android:layout_alignParentBottom="true" />   		
    	</RelativeLayout>
	    
	</LinearLayout>
	
	
	<LinearLayout
     	android:id="@+id/slide_layout21"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="74"
    	android:orientation="horizontal" >
	</LinearLayout>
	
	<LinearLayout
     	android:id="@+id/slide_layout22"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="5"
    	android:orientation="horizontal" 
    	android:background="#d4d4d4">
	</LinearLayout>
	
	<LinearLayout
     	android:id="@+id/slide_layout23"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="75"
    	android:orientation="horizontal" >
	</LinearLayout>
	
	<LinearLayout
     	android:id="@+id/slide_layout18"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="190"
    	android:orientation="horizontal" >
	    
	    <RelativeLayout
    		android:layout_width="0dp"
    		android:layout_height="match_parent"
    		android:layout_weight="497">
    	
	        <TextView
	             android:id="@+id/farba_pozadia"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="#393939"
        		android:text="@string/farba_pozadia"
        		android:includeFontPadding="false" />
	        
	        <ImageView
        		android:id="@+id/slide_color"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:scaleType="fitXY"
        		android:layout_alignParentBottom="true" />   		
    	</RelativeLayout>
    	
    	
    	<LinearLayout
    		android:layout_width="0dp"
    		android:layout_height="match_parent"
    		android:layout_weight="6"
    		android:background="#d4d4d4"
    		android:orientation="horizontal" >
    	</LinearLayout>
    
    	<LinearLayout
    		android:layout_width="0dp"
    		android:layout_height="match_parent"
    		android:layout_weight="177"
    		android:orientation="horizontal" >
    	</LinearLayout>
    	
    	<RelativeLayout
    		android:layout_width="0dp"
    		android:layout_height="match_parent"
    		android:layout_weight="320">
    	
	        <TextView
	            android:id="@+id/vyber_jazyka"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="#393939"
        		android:text="@string/vyber_jazyka"
        		android:includeFontPadding="false" />
	        
	        <ImageView
        		android:id="@+id/slide_language"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:scaleType="fitXY"
        		android:layout_alignParentBottom="true"/>   		
    	</RelativeLayout>
	    
	</LinearLayout>
	
	<LinearLayout
     	android:id="@+id/slide_layout19"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="74"
    	android:orientation="horizontal" >
	</LinearLayout>

	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="5"
    	android:orientation="horizontal" 
    	android:background="#d4d4d4">
	</LinearLayout>
	
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="2"
    	android:orientation="horizontal" >
	</LinearLayout>
	
	<!-- <LinearLayout
     	android:id="@+id/slide_layout20"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="226"
    	android:orientation="horizontal" 
    	android:gravity="center">
	   
	
	    <LinearLayout
	        android:id="@+id/slide_layout201"
    		android:layout_width="150dp"
    		android:layout_height="30dp"
    		android:background="#ccc"
    		android:gravity="center"
    		android:orientation="horizontal"
    		android:clickable="true">

    		<ImageView
        		android:id="@+id/logout_img"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginRight="15dp"
        		android:adjustViewBounds="true"
        		android:scaleType="fitCenter"
        		android:src="@drawable/logout" />

    		<TextView
    		    android:id="@+id/slide_login"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:textColor="#393939"
        		android:text="@string/prihlasit" />

		</LinearLayout>
	</LinearLayout> -->
    
    
</LinearLayout>
